hphp/hack/test/typecheck/await_in_coroutine1.php
<?hh // strict

coroutine function f(Awaitable<string> $x) {
  $s = await $x;
}
